** Released versions
*** Version 7.0.4
**** Improvements
***** Change to calculation of =ref.house.permeability=
The function can now specify whether to include or exclude deliberate ventilation from the airChange rate calculation.
***** Change to calculation of =house.sit=
Calculation now defines heatloss as specific heat loss + ventilation heat loss rather than just specific heatloss as before.
*** Verison 7.0.3
**** Bugs Fixed
***** Reverted macro validation fixes added as they cause errors which affect previous BEIS scenarios
*** Version 7.0.2
**** Bugs Fixed
***** House Permeability Calculation
Calculate house envelope using all surfaces not just external - Asked for by BEIS/Hideem team
*** Version 7.0.1
**** Bugs Fixed
***** Combinations.choice - now expands combinations to actual measure classes rather than nulls - caused by a bad code merge
***** Suggestions and help for macros
The desktop application now includes suggestions and help for macro arguments which are not optional.
These arguments were previously being left out, by mistake.
*** Version 7.0.0
**** New Features
***** Combinations Choice
To help with performance issues being created by using the ~combinations macro within templates combinations choice has been added to avoid the need to macro expand the scenario before validation. This expansion now happens when executing the simulaiton see =ref.combination.choice=.

***** Products Modelling
To enable modelling of some products policy changes to the NHM some new scenario language elements have been added.

For modelling of changes to energy used by appliances and cooking the =ref.measure.set-adjustment-terms= function allows you to apply a linear correction factor to the energy use of appliances or overaching energy use coooking with reference to SAP2012 L10.
