@@ -63,6 +63,17 @@
           </para>
         </sect4>
       </sect3>
+      <sect3 id="new-features">
+        <title>New Features</title>
+        <sect4 id="added-new-function-ref.house.has-solar-thermal">
+          <title>Added new function
+          <xref linkend="ref.house.has-solar-thermal"/></title>
+          <para>
+            Returns true of the central hot water heating system
+            includes a solar thermal component
+          </para>
+        </sect4>
+      </sect3>
     </sect2>
     <sect2 id="verison-7.0.3">
       <title>Verison 7.0.3</title>
@@ -112,7 +123,7 @@
     </sect2>
     <sect2 id="version-7.0.0">
       <title>Version 7.0.0</title>
-      <sect3 id="new-features">
+      <sect3 id="new-features-1">
         <title>New Features</title>
         <sect4 id="combinations-choice">
           <title>Combinations Choice</title>
@@ -186,7 +197,7 @@
     </sect2>
     <sect2 id="version-6.5.5">
       <title>Version 6.5.5</title>
-      <sect3 id="new-features-1">
+      <sect3 id="new-features-2">
         <title>New Features</title>
         <para>
           Put back the <emphasis>desired-heat-months</emphasis> property
@@ -204,7 +215,7 @@
     </sect2>
     <sect2 id="version-6.5.4">
       <title>Version 6.5.4</title>
-      <sect3 id="new-features-2">
+      <sect3 id="new-features-3">
         <title>New Features</title>
         <sect4 id="heat-loss-roofs-and-ground-floors-for-flats">
           <title>Heat loss roofs and ground floors for flats</title>
@@ -312,7 +323,7 @@
     </sect2>
     <sect2 id="version-6.5.2">
       <title>Version 6.5.2</title>
-      <sect3 id="new-features-3">
+      <sect3 id="new-features-4">
         <title>New Features</title>
         <sect4 id="inclusion-of-a-test-for-wall-thickness">
           <title>Inclusion of a test for wall thickness</title>
@@ -324,7 +335,7 @@
     </sect2>
     <sect2 id="version-6.5.1">
       <title>Version 6.5.1</title>
-      <sect3 id="new-features-4">
+      <sect3 id="new-features-5">
         <title>New Features</title>
         <sect4 id="roof-area-function">
           <title>Roof Area Function</title>
@@ -358,7 +369,7 @@
         more in-depth discussion of the energy calculator update, see
         ref.sap-2012-spec.
       </para>
-      <sect3 id="new-features-5">
+      <sect3 id="new-features-6">
         <title>New Features</title>
         <sect4 id="bredem-specific-configuration">
           <title>BREDEM Specific Configuration</title>
@@ -557,7 +568,7 @@
           </itemizedlist>
         </sect4>
       </sect3>
-      <sect3 id="new-features-6">
+      <sect3 id="new-features-7">
         <title>New features</title>
         <sect4 id="multiple-stocks">
           <title>Multiple stocks</title>
@@ -627,7 +638,7 @@
           </para>
         </sect4>
       </sect3>
-      <sect3 id="new-features-7">
+      <sect3 id="new-features-8">
         <title>New Features</title>
         <sect4 id="choose-how-to-weight-your-stock.">
           <title>Choose how to weight your stock.</title>
@@ -910,7 +921,7 @@
           </para>
         </sect4>
       </sect3>
-      <sect3 id="new-features-8">
+      <sect3 id="new-features-9">
         <title>New features</title>
         <sect4 id="improvement-to-select.weighted">
           <title>Improvement to
@@ -995,7 +1006,7 @@
         This version was not published, and only exists for technical
         reasons of little interest.
       </para>
-      <sect3 id="new-features-9">
+      <sect3 id="new-features-10">
         <title>New features</title>
         <sect4 id="more-useful-handling-of-electricity-as-a-fuel">
           <title>More useful handling of <literal>Electricity</literal>
@@ -1057,7 +1068,7 @@
     </sect2>
     <sect2 id="version-6.1.0-30th-july-2015">
       <title>Version 6.1.0 [30th July 2015]</title>
-      <sect3 id="new-features-10">
+      <sect3 id="new-features-11">
         <title>New Features</title>
         <sect4 id="addition-of-ref.house.flags-and-extension-of-flag-matching">
           <title>Addition of <xref linkend="ref.house.flags"/> and
@@ -1285,7 +1296,7 @@
           </para>
         </sect4>
       </sect3>
-      <sect3 id="new-features-11">
+      <sect3 id="new-features-12">
         <title>New features</title>
         <sect4 id="hybrid-heat-pumps-and-gas-heat-pumps">
           <title>Hybrid Heat Pumps and Gas Heat Pumps</title>
@@ -1710,7 +1721,7 @@
           </listitem>
         </itemizedlist>
       </sect3>
-      <sect3 id="new-features-12">
+      <sect3 id="new-features-13">
         <title>New Features</title>
         <sect4 id="addition-of-ref.scheduling.repeat">
           <title>Addition of
